Update yandex api key

--- a/app/assets/stylesheets/app/b-form.css.erb
+++ b/app/assets/stylesheets/app/b-form.css.erb
@@ -2,13 +2,12 @@ form {
 	outline: none;
 }
 input[type="text"], textarea {
-	padding: 3px 4px;
-	border: 1px solid #ccc;
-	border-top-color: #afafaf;
+	padding: 4px 4px;
+	border: 1px solid #c4c4c4;
 	
-	-webkit-box-shadow: inset 0px 1px 2px 0px #d8d8d8;
-	-moz-box-shadow: inset 0px 1px 2px 0px #d8d8d8;
-	box-shadow: inset 0px 1px 2px 0px #d8d8d8;
+	-webkit-box-shadow: inset 0px 2px 0px 0px #e2e2e2;
+	-moz-box-shadow: inset 0px 2px 0px 0px #e2e2e2;
+	box-shadow: inset 0px 2px 0px 0px #e2e2e2;
 }
 
 input[type="text"] {
@@ -418,6 +417,10 @@ input[type="text"] {
 	
 	position: absolute;
 	right: 0;
+}
+
+.b-form__questions_container.show_page {
+  margin: -28px 0 28px;
 }
 
 .b-form__questions_infinity {
