--- a/app/views/missings/new.html.erb
+++ b/app/views/missings/new.html.erb
@@ -1,7 +1,8 @@
+<% @title = "Размещение объявления" %>
 <div class="p-new-missing container_16 b-content">
 	
 <div class="grid_10">
-<div class="b-header">
+<div class="t-big">
 	Размещение объявления
 </div>
 
