--- a/app/assets/stylesheets/app/b-header.css
+++ b/app/assets/stylesheets/app/b-header.css
@@ -5,7 +5,8 @@ h3 { font-size: 14px; }
 .b-header {
 	font-size: 18px;
 	margin-bottom: 14px;   
-	
+    padding-bottom: 5px;
+    border-bottom: 2px solid #913A64;
 }
 	
 	.b-header__description {
