--- a/app/assets/stylesheets/app/p-main.css
+++ b/app/assets/stylesheets/app/p-main.css
@@ -9,9 +9,14 @@
 }        
 
 .p-main-info{
-	margin-top: 50px;
+	margin-top: 10px;
 }              
 
+
+.p-main-info-list {
+  list-style: none;
+  margin: 0;
+}
 
 .p-main-info-list li{
 	margin-bottom: 13px;
@@ -23,8 +28,7 @@
 	}
 
 	.p-main-info-text {
-		height: 65px;
-		width: 330px;
+		height: 85px;
 		line-height: 1.5;
 		color: #666666;
 
@@ -85,7 +89,6 @@
 		
 		line-height: 1.5;
 		color: #666666;
-		width: 320px;
 	}
 
 	.p-main-suggest ul{
@@ -315,11 +318,12 @@
 
 
 
-.p-main-search-container {
-  padding-top: 17px;
+.p-main-search-field {
+  height: 27px !important;
+  width: 96%;
 }
 
-.p-main-search-field {
-  height: 25px !important;
-  width: 200px;
+.p-main-search-button {
+  width: 100px;
+  padding-left: 5px;
 }
