--- a/app/assets/stylesheets/app/p-missing.css.erb
+++ b/app/assets/stylesheets/app/p-missing.css.erb
@@ -8,8 +8,8 @@
   }
  
 .b-missing__date_location {
-  margin: 1em 0;
-  }
+  margin: 4px 0 15px;
+}
 
 .b-missing__information {
 	clear: both;
@@ -170,7 +170,7 @@ div.b-missing__share {
   margin-bottom: 10px;
 }
 .b-missing__map {
-	height: 225px;
+	height: 260px;
 }
 
 
@@ -533,7 +533,7 @@ div.b-missing__tabs {
 
 	.b-missing__print_ad img{
 		position: relative;
-		top: 3px;
+		top: 5px;
 		width: 16px;
 		height: 16px;
 	}
