Update yandex api key

--- a/app/assets/stylesheets/app/p-missing.css.erb
+++ b/app/assets/stylesheets/app/p-missing.css.erb
@@ -537,3 +537,14 @@ div.b-missing__tabs {
 		width: 16px;
 		height: 16px;
 	}
+
+
+
+    .b-missing__add_photo_description {
+      width: 14em;
+      margin: 6px 0;
+    }
+
+    .b-missing__add_photo_description ul {
+      margin: .4em 0 .6em 2em;
+    }
