--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -21,7 +21,7 @@
 				Мы поможем вам связаться с профессиональными следователями, волонтерами и просто полезными людьми, готовыми заняться поиском пропавшего.
 				</p>
 			</li>
-			<li><%= button_to "Создать объявление", "/add_missing/common", :class => "t-medium_fat silver blow l-full_width"%></li>
+            <li><%= button_to "Создать объявление", "/add_missing/", :method => :get, :class => "t-medium_fat silver blow l-full_width"%></li>
 		</ul>	
 	</div>
 	
