--- a/app/views/missings/new.html.erb
+++ b/app/views/missings/new.html.erb
@@ -2,7 +2,7 @@
 <div class="p-new-missing container_16 b-content">
 	
 <div class="grid_10">
-<div class="t-big">
+<div class="p-new-missing__header t-big">
 	Размещение объявления
 </div>
 
