--- a/app/assets/stylesheets/app/p-missing.css.erb
+++ b/app/assets/stylesheets/app/p-missing.css.erb
@@ -86,8 +86,12 @@
 	margin: 10px 5% 9px;
 }           
 	div.b-missing__i_saw_in {
-		padding: 0 .5em .5em;
-	}    
+      margin: 1em 0.9em 0.5em;
+    }
+
+    .b-missing__i_saw_in_change {
+      margin: .5em -0.3em .5em;
+    }
 	                  
 	input.b-missing__i_saw_in {
 		width: 100px;  
@@ -159,7 +163,7 @@
 }
 
 div.b-missing__share {
-	width: 15em;
+	width: 11em;
 	margin-left: 3px;
 }
 
@@ -242,7 +246,7 @@ div.b-missing__share {
                   
 
 	div.b-missing__add_comment {
-		margin-top: 45px;
+		margin: 45px 0 1em;
 	}                   
 	
 		textarea.b-missing__add_comment {
@@ -552,4 +556,9 @@ div.b-missing__tabs {
 
     .b-missing__add_photo_description ul {
       margin: .4em 0 .6em 2em;
+      
+    }
+
+    .p-missing .b-form__questions_container {
+      margin: -1em 0 1em;
     }
