--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -51,7 +51,7 @@
       </ul>	
     </div>
 
-	<div class="grid_5" type="volunteer">
+	<div class="grid_5" type="volunteer" animate_missing="true">
 		<ul class="p-main-info-list">
 			<li><%= image_tag "volonter-ico.png" %></li>
 			<li><h3>Хотите помочь в поисках?</h3></li>
