--- a/app/assets/stylesheets/app/b-report.css
+++ b/app/assets/stylesheets/app/b-report.css
@@ -1,15 +1,12 @@
-.b-report {
-  margin-top: 2em;
-}
 /* Тулбар  */
 .b-report__toolbar {
-	margin-top: 20px;
+	margin-bottom: 20px;
 }
 .toolbar .ui-state-default, .toolbar .ui-widget-content .toolbar .ui-state-default, .toolbar .ui-widget-header .toolbar .ui-state-default
 {	
 	color: #0065cc;
 	
-	padding: 3px 10px 3px !important;
+	padding: 10px 15px 10px !important;
 	border: 1px solid #e5e5e5; 
 	border-bottom-color: #e6e6e6;
 	border-left-color: #e4e4e4;
@@ -61,6 +58,11 @@
 	background: -ms-linear-gradient(top, #f1f1f1 0%,#fff 70%); /* IE10+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1f1f1', endColorstr='#fff',GradientType=0 ); /* IE6-9 */
 	background: linear-gradient(top, #f1f1f1 0%,#fff 70%); /* W3C */
+}
+
+.b-report__empty {
+  color: #666;
+  text-align: center;
 }
                    
 
