--- a/app/assets/stylesheets/app/p-main.css
+++ b/app/assets/stylesheets/app/p-main.css
@@ -151,6 +151,8 @@
   		-webkit-border-radius: 4px;
 		-moz-border-radius: 4px;
 		border-radius: 4px;
+
+        z-index: 100;
 	}
 		.p-main-suggest-popup img{
 			width: 34px;
