--- a/app/views/missings/_show_right_sidebar.html.erb
+++ b/app/views/missings/_show_right_sidebar.html.erb
@@ -24,7 +24,7 @@
 					<% end %>
 				</table>
 				<div class="t-center">        
-					<% if @author.id == current_user.object_id %>
+					<% if current_user && @author.id == current_user.id %>
 					<%= tag :input, { :type => "button", :value => "Отредактировать объявление", :class => "b-missing__toggle_send_message" } %>                                                         
 					<% else %>
 					<%= tag :input, { :type => "button", :value => "Написать личное сообщение", :class => "b-missing__toggle_send_message" } %>                                                                               
@@ -63,43 +63,22 @@
 			</div>
 
 		<div class="clear"></div>             	
-		
-			<div class="b-sidebar b-missing__rightside">
-				
-				<!-- Тестовое инпут поле -->
-				<div class="demo">
 
-				<div class="ui-widget">
-					<label>Your preferred programming language: </label>
-						<select id="combobox">
-							<option value="">Select one...</option>
-							<option value="ActionScript">ActionScript</option>
-							<option value="AppleScript">AppleScript</option>
-							<option value="Asp">Asp</option>
-							<option value="BASIC">BASIC</option>
-							<option value="C">C</option>
-							<option value="C++">C++</option>
-							<option value="Clojure">Clojure</option>
-							<option value="COBOL">COBOL</option>
-							<option value="ColdFusion">ColdFusion</option>
-							<option value="Erlang">Erlang</option>
-							<option value="Fortran">Fortran</option>
-							<option value="Groovy">Groovy</option>
-							<option value="Haskell">Haskell</option>
-							<option value="Java">Java</option>
-							<option value="JavaScript">JavaScript</option>
-							<option value="Lisp">Lisp</option>
-							<option value="Perl">Perl</option>
-							<option value="PHP">PHP</option>
-							<option value="Python">Python</option>
-							<option value="Ruby">Ruby</option>
-							<option value="Scala">Scala</option>
-							<option value="Scheme">Scheme</option>
-						</select>
-					</div>
-				
+        <% if current_user && @missing.user.id == current_user.id %>
+        <div class="b-sidebar b-missing__rightside">
 
-				</div>
+            <div class="ui-widget">
+                <div class="b-sidebar__header">Версии</div>
+                  <select class="b-missing__select_version">
+                    <% @missing.users_who_answer.each do |u| %>
+                      <option value="<%= u.id %>"><%= @missing.user.id == u.id ? "Ваша версия" : YandexInflect.inflections(u.name).second %></option>
+                    <% end %>
+                  </select>
+                </div>
+            
+
+            </div>
+            <% end %>
 
 				<% if @helpers.length > 0 %>
 				<div class="b-sidebar__hr_100"></div>
