--- a/app/views/main/_missing_information.html.erb
+++ b/app/views/main/_missing_information.html.erb
@@ -1,26 +1,28 @@
 <div class="container_16 p-main-suggest-info" type="missing">
-	<div class="grid_5 p-main-suggest-head"><h2>Как пользоваться сайтом</h2></div>
-    <div class="grid_10 p-main-suggest-head"><h2>Мы занимаемся поиском пропавших безвести</h2></div>
+    <div class="grid_10 p-main-suggest-head"><h2>Мы поможем вам</h2></div>
 	<div class="clear"></div>
 	                                         
-	<div class="grid_5">
-		<iframe src="http://player.vimeo.com/video/31262642" width="315" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-		<p class="p-main-suggest-video-comment">Этот ролик расскажет как мы ищем людей.</p>
-	</div>
-	
 	<div class="b-main-info-margin grid_5">
-		<h3>Поисковые отряды</h3>
-		<p>Которые займутся необходимой для поиска работой.</p>
+      <ul>
+        <li><h3>Найдем добровольцев</h3></li>
+        <li><p>Которые займутся необходимой для поиска работой: прочешут местность, расклеят объявления, соберут нужную информацию.</p></li>
+      </ul>
 	</div>
 
 	<div class="b-main-info-margin grid_5">
 		<ul>
-			<li><h3>Добровольцы для поиска</h3></li>
-			<li><p>Которые займутся необходимой для поиска работой.</p></li>
-			<li><h3 class="p-main-suggest-hshift">Обстоятельства пропажи</h3></li>
-			<li><p>Соберем вместе информацию со знакомых пропавшего.</p></li>
+			<li><h3>Соберем информацию </h3></li>
+            <li><p>Собрем вместе информацию со знакомых пропавшего, что позволит создать полную картину происшедшего.</p></li>
+		</ul>
+	</div>
+
+	<div class="b-main-info-margin grid_5">
+		<ul>
+			<li><h3>Организуем поиски</h3></li>
+            <li><p>Если человек потерялся, то наши координаторы организуют активные поиски.</p>
+              <p>Если в пропаже замешен криминал, то мы поможем связаться с детективами, которые возьмутся за ваше дело</p></li>
 		</ul>
 	</div>
 
 	            
-</div>
+</div> 
