--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -161,3 +161,8 @@ a:hover { color: red;}
   -webkit-background-clip: padding;  /* Safari 4? Chrome 6? */
   background-clip: padding-box;      /* Firefox 4, Safari 5, Opera 10, IE 9 */
 }
+
+
+textarea { 
+  resize: none;
+}
