--- a/app/views/main/_volunteer_information.html.erb
+++ b/app/views/main/_volunteer_information.html.erb
@@ -37,7 +37,10 @@
 	</div>
 
 	<div class="grid_5">
-		<iframe src="http://player.vimeo.com/video/31262642" width="315" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-		<p class="p-main-suggest-video-comment">Обучайющий видеоролик расскажет вам об осо-<br/>бенностях работы с сайтом, если вы детектив.</p>
+    	<ul>
+			<li><h3 class="p-main-suggest-hshift">Еще одно достоинство</h3></li>
+			<li><p>Этот блок ведь такой рекламный, поэтому здесь перечисляются всякие достоинства для каждого типа.</p></li>
+		</ul>
+
 	</div>                
 </div>
