--- a/app/views/missings/_common.html.erb
+++ b/app/views/missings/_common.html.erb
@@ -7,7 +7,7 @@ $(function(){
 </script>
   <div class="b-form__field">
     <%= f.label :name, "Кто пропал", :class => "b-form__label" %>
-    <%= f.text_field :name, :class => "b-form__text_name", :placeholder => "фамилия имя и отчество" %>
+    <%= f.text_field :name, :class => "b-form__text_name", :placeholder => "фамилия имя отчество" %>
   <ul class="b-form__gender_list">
     <li class="b-form__gender_element"> 
       <%= f.radio_button :gender, true  %><%= f.label :gender_true, "мужчина", :class => "b-form__radio_label"  %>
